<resources>
    <!-- Activity-->
    <string name="app_name">FuelRecorder</string>
    <string name="title_activity_records">Records</string>
    <!-- MainFragment -->
    <string name="delete_confirm">Do You Want to Delete the Record?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_msg">Delete Record</string>
    <!-- SubFragment -->
    <string name="date_seperate"> / </string>
    <string name="set_date">Set Date</string>
    <string name="text_price">Price</string>
    <string name="text_amount">Amount</string>
    <string name="text_mileage">Mileage</string>
    <string name="text_note">Note</string>
    <string name="failed_to_record_empty_field">Missing some field</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
