<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textIsSelectable="true"
            android:minEms="4"
            android:gravity="end"
            android:id="@+id/edit_year" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_seperate"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textIsSelectable="true"
            android:gravity="end"
            android:minEms="2"
            android:id="@+id/edit_month" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_seperate"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textIsSelectable="true"
            android:layout_gravity="end"
            android:minEms="2"
            android:id="@+id/edit_date" />
        <Button
            android:id="@+id/btn_set_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_date"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/text_price"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="numberDecimal"
        android:id="@+id/edit_price" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/text_amount"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="numberDecimal"
        android:id="@+id/edit_amount" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/text_mileage"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="numberDecimal"
        android:id="@+id/edit_mileage" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/text_note"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textLongMessage"
        android:id="@+id/edit_note" />
</LinearLayout>